[gd_scene load_steps=17 format=3 uid="uid://48a83im4odpt"]

[ext_resource type="Script" uid="uid://bfajlngukjn1p" path="res://assets/maps/map_test_voxel_picker.gd" id="1_g70gw"]
[ext_resource type="Script" uid="uid://clcj5ggb688r3" path="res://src/voxel_picker.gd" id="2_db5x5"]
[ext_resource type="Material" uid="uid://d3uakirm53t5q" path="res://assets/resources/materials/greybox_1m.tres" id="2_g70gw"]
[ext_resource type="Script" uid="uid://c7c8dbf4gjr5a" path="res://addons/swivel/scripts/swivel.gd" id="4_lm074"]
[ext_resource type="Script" uid="uid://dtv0gpk5iy5tr" path="res://addons/input_receivers/scripts/key_input_vector.gd" id="5_nof2l"]
[ext_resource type="Script" uid="uid://b1rqvgva11iaq" path="res://addons/input_receivers/scripts/mouse_velocity_input_vector.gd" id="6_enlid"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8tn41"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_sf2tl"]
sky_material = SubResource("ProceduralSkyMaterial_8tn41")

[sub_resource type="Environment" id="Environment_3fxw8"]
background_mode = 2
sky = SubResource("Sky_sf2tl")
tonemap_mode = 2
ssao_enabled = true
sdfgi_enabled = true
glow_enabled = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8tn41"]

[sub_resource type="VoxelGeneratorNoise" id="VoxelGeneratorNoise_sf2tl"]
channel = 0
noise = SubResource("FastNoiseLite_8tn41")

[sub_resource type="VoxelBlockyModelEmpty" id="VoxelBlockyModelEmpty_8tn41"]

[sub_resource type="VoxelBlockyModelCube" id="VoxelBlockyModelCube_sf2tl"]
material_override_0 = ExtResource("2_g70gw")

[sub_resource type="VoxelBlockyLibrary" id="VoxelBlockyLibrary_3fxw8"]
models = Array[VoxelBlockyModel]([SubResource("VoxelBlockyModelEmpty_8tn41"), SubResource("VoxelBlockyModelCube_sf2tl")])

[sub_resource type="VoxelMesherBlocky" id="VoxelMesherBlocky_4ddvk"]
library = SubResource("VoxelBlockyLibrary_3fxw8")

[sub_resource type="VoxelFormat" id="VoxelFormat_8tn41"]

[node name="MapTestVoxelPicker" type="Node3D"]
script = ExtResource("1_g70gw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3fxw8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="VoxelTerrain" type="VoxelTerrain" parent="."]
generator = SubResource("VoxelGeneratorNoise_sf2tl")
mesher = SubResource("VoxelMesherBlocky_4ddvk")
format = SubResource("VoxelFormat_8tn41")
gi_mode = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.5, 0.5)

[node name="Thing" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25.263918, 0)
script = ExtResource("4_lm074")
metadata/_custom_type_script = "uid://c7c8dbf4gjr5a"

[node name="Camera3D" type="Camera3D" parent="Thing"]

[node name="VoxelPicker" type="Node" parent="Thing" node_paths=PackedStringArray("voxel_terrain")]
script = ExtResource("2_db5x5")
voxel_terrain = NodePath("../../VoxelTerrain")

[node name="VoxelViewer" type="VoxelViewer" parent="Thing"]

[node name="RayCast3D" type="RayCast3D" parent="Thing"]
target_position = Vector3(0, 0, -5)

[node name="KeyInputVector" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_nof2l")
negative_x_key = &"player.move_left"
positive_x_key = &"player.move_right"
negative_y_key = &"player.dash"
positive_y_key = &"player.move_jump"
negative_z_key = &"player.move_up"
positive_z_key = &"player.move_down"
metadata/_custom_type_script = "uid://dtv0gpk5iy5tr"

[node name="MouseVelocityInputVector" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_enlid")
mouse_visible = false
mouse_captured = true
metadata/_custom_type_script = "uid://b1rqvgva11iaq"
